SAM모델 적용
